# unfold

./: .gitignore  .python-version  1d_Unfolding_test.ipynb  AGENTS.md  README.md  data_jk_pt3.ipynb  data_mc_plots_split_new.ipynb  derive_jk_stat_unc.ipynb  merge_bins_lauren.ipynb  merge_pkl.ipynb  mpt_unfold.ipynb  plot_unfolded-variable_mbin.ipynb  pyproject.toml  requirements.txt  stat_mat_ungroomed.txt  unfolder_v2.ipynb  unfolder_v4.ipynb  unfolder_with_uncertainty.ipynb  validate_unfolder_core.py
.claude/: settings.json
data/: mass_spline_ungroomed.npz  spline_ungroomed.npz  stat_mat_groomed.txt
docs/: Unfolder_core_class_reference.md  Unfolder_rho_class_reference.md  dijet_groomed_rho_binning_study.md  ratio_curvature_regularization.md  rho_channel_unfolding.md
inputs/: README.md
notebooks/: compare_reweight.ipynb  data_jk.ipynb  data_mc_others_fancy.py  data_mc_rho.ipynb  data_mc_rho_fancy.ipynb  data_mc_rho_fancy.py  derive_h_over_p.ipynb  derive_h_over_p_mass.ipynb  derive_jk_stat_unc.ipynb  file_checker.ipynb  input_maker.ipynb  input_maker.py  input_maker_rho.ipynb  input_plotter.ipynb  merge_bins_lauren.ipynb  merge_data.ipynb  merge_data_rho.ipynb  plot_datamc_v3.ipynb  plot_flavor_systematic_variations.py  plot_reco_rho_systematic_variations.py  plot_systematic_variations.py  plot_unfolded-3pt.ipynb  plot_unfolded.ipynb  purity_stability_plots.ipynb  rho_review.ipynb  show_plots.ipynb  test_dag.ipynb  unfold2d_cpp.d  unfold_2d_claude.ipynb  unfold_2d_hidden.ipynb  unfold_2d_hidden_memory.md  unfold_driver.ipynb  unfold_driver_script.ipynb  (+12 more)
(+155 files in other folders)
